# sapylot-lib

./: .gitignore  LICENSE  pyproject.toml  requirements-docs.txt  requirements.txt  sap_auto.py  setup.py
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/en/docs/api-reference/: element.md  table-control.md  table-shell.md
docs/en/docs/getting-started/: basics.md  first-steps.md
docs/en/docs/sap-scripting/: first-script.md  sap-recording-tool.md
docs/pt/: mkdocs.yml
docs/pt/docs/: index.md
docs/pt/docs/api-reference/: exceptions.md  main.md  table.md
docs/pt/docs/getting-started/: basics.md  deeper-look.md  first-steps.md  tips.md
docs/pt/docs/gettingStarted/: deeper-look.md  first-steps.md
docs/pt/docs/sap-scripting/: first-script.md  introduction.md  sap-recording-tool.md
docs/pt/docs/sapScripting/: first-script.md
sapylot/: __init__.py  button.py  element.py  exceptions.py  main.py  tables.py  tabs.py
sapylot/elements/: Button.py  Element.py  __init__.py
sapylot/elements/tables/: Table.py  TableControl.py  TableShell.py
