[project]
name = "sapylot-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "Abimael Miranda"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "pywin32 (>=309,<310)",
    "psutil (>=7.0.0,<8.0.0)",
    "pymdown-extensions (>=10.14.3,<11.0.0)",
    "mkdocstrings[python] (>=0.29.0,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
